# thoughtspot-agent-skills

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  semantic-layer-properties.csv
cli/: README.md  pyproject.toml
cli/ts_cli/: cli.py  client.py
cli/ts_cli/commands/: auth.py  connections.py  metadata.py  profiles.py  tables.py  tml.py
tools/ts-cli/: CLAUDE.md  README.md  pyproject.toml
tools/ts-cli/tests/: fixtures.py  test_agg_command.py  test_agg_generate.py  test_agg_history.py  test_agg_lattice.py  test_agg_measures.py  test_agg_rls.py  test_agg_scoring.py  test_agg_signatures.py  test_agg_spotql.py  test_agg_sqlgen.py  test_alias.py  test_alias_translate.py  test_ast_vs_regex.py  test_audit_context.py  test_audit_corpus.py  test_audit_erd.py  test_audit_findings.py  test_audit_report.py  test_auth.py  test_blend_plan.py  test_build_model_helpers.py  test_build_table_tml.py  test_check_skill_cli_usage.py  test_checks_ai.py  test_checks_data.py  test_checks_human.py  test_checks_perf.py  test_checks_security.py  test_classify.py  test_cli_agentql_alias.py  test_cli_alias.py  test_client_401_retry.py  test_client_5xx_retry.py  test_client_auth.py  test_client_profiles.py  test_create_connection_payload.py  test_cross_references.py  test_databricks_build_model.py  test_databricks_build_mv_cmd.py  (+95 more)
tools/ts-cli/ts_cli/: alias.py  alias_translate.py  cli.py  client.py  formula_common.py  io_helpers.py  model_builder.py  profile_ops.py  promote.py  snowflake_ops.py  spotql_ops.py  sv_build_model.py  sv_build_sv.py  sv_introspect.py  sv_parse.py  sv_sql.py  sv_translate.py  tableau_translate.py  tml_common.py  tml_lint.py
tools/ts-cli/ts_cli/aggregate/: __init__.py  generate.py  history.py  lattice.py  measures.py  rls.py  scoring.py  signatures.py  spotql_aggregate.py  sqlgen.py
tools/ts-cli/ts_cli/audit/: __init__.py  checks_ai.py  checks_data.py  checks_human.py  checks_perf.py  checks_security.py  context.py  erd.py  findings.py  report.py  report_template.html  test_fixtures.py
tools/ts-cli/ts_cli/commands/: aggregate.py  aggregate_advisories.py  aggregate_rls.py  alias.py  audit.py  connections.py  databricks.py  dependency.py  dependency_apply.py  load.py  metadata.py  model.py  orgs.py  powerbi.py  profiles.py  qlik.py  sisense.py  snowflake.py  spotql.py  spotter.py  tableau.py  tableau_formula_ast.py  tableau_generate.py  tableau_parse.py  tableau_postprocess.py  tableau_validate.py  tableau_verify.py  tables.py  tml.py  users.py  variables.py
tools/ts-cli/ts_cli/databricks/: __init__.py  mv_build_model.py  mv_build_view.py  mv_emit.py  mv_emit_base.py  mv_emit_classify.py  mv_emit_expr.py  mv_emit_joins.py  mv_emit_sql.py  mv_emit_window.py  mv_expr.py  mv_parse.py  mv_sql.py  (+5 more)
(+599 files in other folders)
