[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thoughtspot-cli"
version = "0.26.6"
description = "ThoughtSpot REST API CLI — wraps common operations used by Claude skills"
requires-python = ">=3.10,<3.14"
dependencies = [
    "typer>=0.12",
    "requests>=2.32.4",
    "PyYAML>=6.0",
    "keyring>=24.0",
]

[project.scripts]
ts = "ts_cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ts_cli*"]

[tool.setuptools.package-data]
"ts_cli" = ["audit/report_template.html"]
