[build-system]
requires = ["setuptools>=78.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thoughtspot-cli"
version = "0.94.0"
description = "ThoughtSpot REST API CLI — wraps common operations used by Claude skills"
requires-python = ">=3.10,<3.15"
dependencies = [
    "typer>=0.12,<1",
    "requests>=2.33.0",
    "PyYAML>=6.0",
    "keyring>=24.0",
]

[project.optional-dependencies]
snowflake = [
    "snowflake-connector-python>=3.13.1",
]
qlik = [
    "websocket-client>=1.6",
]
dev = [
    "pytest>=7.0",
    "PyYAML>=6.0",
    "radon>=6.0",
    "vulture>=2.10",
    "pip-audit>=2.7",
]

[project.scripts]
ts = "ts_cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ts_cli*"]

[tool.setuptools.package-data]
"ts_cli" = ["audit/report_template.html", "qlik/data/qlik_ts_formula_map.json"]
